# cupid_matching

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CupidMatchingDoc.qmd  Makefile  README.md  example_choo_siow_no_singles.md~  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  releases.md  sitemap.xml
choo_siow/: index.html
choo_siow_gender_heteroskedastic/: index.html
choo_siow_heteroskedastic/: index.html
choo_siow_no_singles/: index.html
cupid_matching/: choo_siow.py  choo_siow_no_singles.py  cupid_streamlit.py  cupid_streamlit_utils.py  entropy.py  example_choo_siow.py  example_choo_siow_no_singles.py  example_choosiow.py  ipfp_solvers.py  matching_utils.py  min_distance.py  min_distance_utils.py  model_classes.py  nested_logit.py  poisson_glm.py  poisson_glm_utils.py  utils.py
cupid_streamlit/: index.html
cupid_streamlit_utils/: index.html
docs/: choo_siow_no_singles.md  cupid_streamlit_utils.md  example_choo_siow.md  example_choo_siow_no_singles.md  example_nested_logit.md  index.md
entropy/: index.html
example_choo_siow/: index.html
example_choo_siow_no_singles/: index.html
example_choosiow/: index.html
example_nested_logit/: index.html
example_nestedlogit/: index.html
ipfp_solvers/: index.html
matching_utils/: index.html
min_distance/: index.html
min_distance_utils/: index.html
model_classes/: index.html
nested_logit/: index.html
poisson_glm/: index.html
poisson_glm_utils/: index.html
search/: search_index.json
site/: index.html  objects.inv  sitemap.xml
tests/: test_choo_siow.py  test_ipfp.py  (+4 more)
(+35 files in other folders)
