[project]
name = "cupid-matching"
version = "1.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs-python-utils>=0.8.0",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "altair",
    "altair-saver",
    "vega-datasets",
    "matplotlib",
    "seaborn",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
    "pre-commit",
    "pytest",
    "ruff",
    "mypy",
    "streamlit",
]

[tool.setuptools]
packages = ["cupid_matching"]

[tool.setuptools.package-data]
"cupid_matching" = ["examples/*", "examples/**/*"]

[tool.ruff]
line-length = 88
